# FailureLogAnalyzer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: celery_app.py  celery_signals.py  main.py
backend/app/agent/: __init__.py  checkpointer.py  graph.py  intent_router.py  state.py
backend/app/agent/nodes/: __init__.py  (+6 more)
backend/app/cli/: bootstrap_admin.py  seed_defaults.py  seed_demo.py  watch.py
backend/app/core/: auth.py  config.py  logging.py  metrics.py  redis.py
backend/app/db/: engine.py  session.py
backend/app/ingestion/: db_writer.py  directory_watcher.py  job_store.py  parsers.py  progress.py  schemas.py  session_store.py
backend/app/llm/: __init__.py  budget_tracker.py  circuit_breaker.py  cost_calculator.py  job_store.py  output_parser.py  prompt_renderer.py  rate_limiter.py  record_selector.py  schemas.py
backend/app/middleware/: __init__.py  logging_middleware.py  metrics_middleware.py
backend/app/rules/: base.py  custom.py  registry.py  taxonomy.py
backend/app/schemas/: agent.py  analysis_query.py  compare.py  cross_benchmark.py  llm.py  provider_secret.py  report.py  rule.py  user.py
backend/app/services/: __init__.py  agent_conversations.py  analysis_query.py  compare.py  cross_benchmark.py  default_seed.py  provider_secret_crypto.py  report_builder.py  user_admin.py
backend/app/tasks/: __init__.py  analysis.py  async_runner.py  ingest.py  report.py
backend/app/tests/: conftest.py
(+347 files in other folders)
